# magicbot

./: Cargo.toml  README.md  package-rhel.sh  package-signal-cli-rpm.sh  package-signalcli-rhel.sh
.github/workflows/: build-linux.yml  build-signalcli-linux.yml
src/: main.rs
