[package]
name = "magicbot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
dialoguer = "0.11"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"

# uuid = { version = "1", features = ["v4"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
